--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ golf/fusion/embedding_data/stgcnpp/*
 
 golf/fusion/embedding_data/timesformer/*
 !golf/fusion/embedding_data/timesformer/
+
+golf/fusion/work_dirs/my_stgcnpp
