--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ golf/fusion/embedding_data/timesformer/*
 !golf/fusion/embedding_data/timesformer/
 
 golf/fusion/work_dirs/my_stgcnpp
+
+golf\fusion\fusion_ckpt\fusion_mlp_best.pth
