stgcn finetuning setting complete
stgcn 파인튜닝 완료
test 데이터에 대해 최대 62%의 정확도를 가짐

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ golf/Timesformer_finetune/timesformer_finetuned.pth
 
 golf/Timesformer_finetune/checkpoint.pth
 
+golf/Timesformer_finetune/epochs
+
 golf/fusion/embedding_data/stgcnpp/*
 !golf/fusion/embedding_data/stgcnpp/
 
