Add GOLF_pipeline for 3D golf capture and analysis
Introduces the GOLF_pipeline module with scripts, configuration files, and source code for capturing 3D golf motion data using RealSense and MediaPipe, and analyzing metrics such as X-Factor, COM speed, swing speed, and head speed. Includes YAML configs, requirements, shell scripts for running capture and analysis, and utility functions. Updates .gitignore to exclude pipeline-specific virtual environments and output directories.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ golf/fusion/embbeding_data/timesformer/*
 golf/fusion/fusion_images
 
 golf/3Dcam/output
+
+golf/GOLF_pipeline/.venv/
+golf/GOLF_pipeline/summary
