realsense 코드 변경 및 자동화
핵심 스크립트를 'code'에서 'realsense_py'로, S3 연결 파일을 'S3_conncet'으로 이동하여 정리를 개선했습니다. 선형 보간 및 스켈레톤 CSV 마스킹을 위해 'interpolation.py'를 추가하고, CLI를 통해 보간 옵션을 사용한 후처리를 지원하도록 'rs_realsense_openpose_record2csv.py'를 업데이트했습니다. 출력 디렉터리를 제외하도록 .gitignore를 업데이트하고, 더 이상 사용되지 않는 command.txt를 삭제했습니다.

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ golf/GOLF_pipeline/.venv/
 golf/GOLF_pipeline/summary
 
 golf/3Dcam/.venv/
-golf/3Dcam/realsense_pack_and_upload.config.json
+golf/3Dcam/S3_connect/realsense_pack_and_upload.config.json
+golf/3Dcam/realsense_py/output/
