--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ golf/3Dcam/S3_connect/output/
 golf/3Dcam/S3_connect/realsense_pack_and_upload.config.json
 golf/3Dcam/realsense_py/output/
 golf/3Dcam/docker/docker-openpose/color/
+
+golf/containers/client/openpose-client/result/
+golf/containers/client/openpose-client/color/
