openpose api 수정 (느림)
openpose api를 cuda12.0에 맞게 수정
지금은 처리가 느림(1동영상에 5분)
gpu를 안쓰는게 문제인거 같은

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ golf/3Dcam/docker/docker-openpose/color/
 
 golf/containers/client/openpose-client/result/
 golf/containers/client/openpose-client/color/
+
+golf/containers/openpose-api/pose_iter_440000.caffemodel
