openpose-server 속도 정상화(10초)_
10초 안에 처리됨
gpu 문제는 아니고, batch 처리가 안되는게 문제였음
한번 이미지 처리할때마다 openpose 계속 불러오는 문제

--- a/golf/containers/openpose-api/Dockerfile
+++ b/golf/containers/openpose-api/Dockerfile
@@ -1,5 +1,18 @@
 FROM d0ckaaa/openpose:cuda12
 
+# The base OpenPose image may include NVIDIA-specific ENV like
+# NVIDIA_REQUIRE_CUDA="cuda>=12.4 brand=tesla" which can force a
+# driver/brand check that breaks on some hosts (for example RunPod RTX
+# 4000a where brand != tesla). Override these here so the container
+# will not be blocked by that label at runtime. These values can be
+# tightened or removed if you deploy to environments that require them.
+# Emptying NVIDIA_REQUIRE_CUDA disables the brand check from the base image.
+ENV NVIDIA_REQUIRE_CUDA=""
+ENV NVIDIA_PRODUCT_NAME=""
+ENV NVIDIA_VISIBLE_DEVICES=all
+ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility,video
+
+
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
 	python3-pip \
