add next.js OAuth login system (+ s3 connect rename to realsense_pack_and_upload)
aws cognito 사용 google OAuth 시스템 테스트를 위한 next.js 설치 및 로그인 페이지 생성
next.js에서 기본적으로 .gitignore 제공하기에, 따로 Jabez repo 단에서 ignore 걸지는 않았음

--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,11 @@ golf/3Dcam/output
 golf/GOLF_pipeline/.venv/
 golf/GOLF_pipeline/summary
 
-golf/3Dcam/S3_connect/.venv/
-golf/3Dcam/S3_connect/dist/
-golf/3Dcam/S3_connect/build/
-golf/3Dcam/S3_connect/output/
-golf/3Dcam/S3_connect/realsense_pack_and_upload.config.json
+golf/3Dcam/realsense_pack_and_upload/.venv/
+golf/3Dcam/realsense_pack_and_upload/dist/
+golf/3Dcam/realsense_pack_and_upload/build/
+golf/3Dcam/realsense_pack_and_upload/output/
+golf/3Dcam/realsense_pack_and_upload/realsense_pack_and_upload.config.json
 golf/3Dcam/realsense_py/output/
 golf/3Dcam/docker/docker-openpose/color/
 
