--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ golf/3Dcam/S3_connect/realsense_pack_and_upload.config.json
 golf/3Dcam/realsense_py/output/
 golf/3Dcam/docker-openpose/color/
 golf/3Dcam/docker-openpose/result/raw_responses/
+
+golf/GOLF_pipeline/output
+golf/GOLF_pipeline/input
