--- a/golf/containers/skeleton_metric-api/requirements.txt
+++ b/golf/containers/skeleton_metric-api/requirements.txt
@@ -8,4 +8,5 @@ pyyaml==6.0
 # Use headless OpenCV in container environments. If developing locally and you need GUI support,
 # install opencv-python instead of opencv-python-headless in your dev env.
 opencv-python-headless==4.7.0.72
-# mediapipe and pyrealsense2 removed by request; add back if needed in a specific environment
+
+boto3
