edit metrics_algorithm + mmaction model output
메트릭 알고리즘 api 전체 파이프라인 완성
mmaction 모델 호출 까지 완성
2d, 3d 모두 가능

--- a/golf/containers/skeleton_metric-api/Dockerfile
+++ b/golf/containers/skeleton_metric-api/Dockerfile
@@ -32,6 +32,8 @@ COPY api_server.py /opt/skeleton_metric-api/api_server.py
 COPY ./openpose /opt/skeleton_metric-api/openpose
 COPY controller.py /opt/skeleton_metric-api/controller.py
 COPY ./metric_algorithm /opt/skeleton_metric-api/metric_algorithm
+COPY .env /opt/skeleton_metric-api/.env
+COPY mmaction_client.py /opt/skeleton_metric-api/mmaction_client.py
 
 
 # Copy pose_iter_440000.caffemodel to the correct model directory
